# bagual-list

./: .coverage  app.py  pyproject.toml
bagual_list/: app.py
tests/: test_app.py
